[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "codex-sessions-converter"
version = "0.1.0"
description = "Convert Codex session rollout JSONL files to readable Markdown or YAML."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "rich>=14.1"
]
authors = [
  { name = "Alex" }
]
keywords = ["codex", "jsonl", "markdown", "yaml", "sessions"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "ruff>=0.5"
]

[project.scripts]
codex-sessions-converter = "codex_sessions_converter.converter:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_sessions_converter"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
files = ["src", "tests"]
